--- a/Source/GithubRepositoryStats/ToolWindows/MyToolWindowControl.xaml
+++ b/Source/GithubRepositoryStats/ToolWindows/MyToolWindowControl.xaml
@@ -1,92 +1,120 @@
 ﻿<UserControl
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
-             xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
-             xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
-             xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
-             xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
-             xmlns:local="clr-namespace:GithubRepositoryStats" x:Class="GithubRepositoryStats.MyToolWindowControl"
-             toolkit:Themes.UseVsTheme="True"
-             mc:Ignorable="d"
-             d:DesignHeight="300"
-             d:DesignWidth="300"
-             x:Name="MyToolWindow">
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
+    xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
+    xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
+    xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
+    xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
+    xmlns:local="clr-namespace:GithubRepositoryStats"
+    xmlns:PlatformUI="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
+    x:Class="GithubRepositoryStats.MyToolWindowControl"
+    toolkit:Themes.UseVsTheme="True"
+    mc:Ignorable="d"
+    d:DesignWidth="300"
+    x:Name="GithubRepositoryStats">
     <Grid>
-        <StackPanel Orientation="Vertical"                    >
-            <ToolBar               >
-                <Button Content="Refresh"                    
-                    Margin="10 5 5 5"
-                    Background="gray"
-                    Foreground="white"
-                    Click="refreshButton_Click"
-                    HorizontalAlignment="Left"
-                    Height="34"
-                    x:Name="refreshButton" />
-            </ToolBar>
+        <ScrollViewer VerticalScrollBarVisibility="Auto">
+            <StackPanel Orientation="Vertical">
+
+                <Border BorderThickness="0,0,0,2" BorderBrush="gray" Padding="5">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
 
 
-            <Label x:Name="repoOwner" 
-                   Content="Owner: "
-                   Foreground="gray"
-                   Cursor="Hand"
-                   FontWeight="Bold"
-                   MouseDoubleClick="repoOwner_MouseDoubleClick"
-                   Margin="5"/>
+                        <Button
+                            Background="gray"
+                            Foreground="Black"
+                            Click="refreshButton_Click"
+                            x:Name="refreshButton" 
+                            Content="Refresh" 
+                            Margin="2 0"
+                            Padding="2"
+                            BorderBrush="Black"/>
 
-            <Label x:Name="repoName" 
-                   Cursor="Hand"
-                   Content="Name: "
-                   Foreground="gray"
-                   MouseDoubleClick="repoName_MouseDoubleClick"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                        <!--<Button        
+                            Background="gray"
+                            Foreground="Black"
+                            Click="refreshButton_Click"
+                            Padding="2"
+                            Content="info" 
+                            Margin="2 0"
+                            BorderBrush="Black"/>-->
+                
+                    </StackPanel>
+                </Border>
 
-            <Label x:Name="repoLanguage" 
-                   Cursor="Hand"
-                   Content="Language: "
-                   Foreground="gray"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                <TextBlock x:Name="textMessage"
+                    TextWrapping="Wrap"
+                    Foreground="Gray"
+                    FontWeight="Bold"
+                    Background="Transparent"
+                    Margin="5">
+                </TextBlock>
 
-            <Label x:Name="repoVisibility" 
-                   Content="Visibility: "
-                   Cursor="Hand"
-                   Foreground="gray"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                <StackPanel x:Name="repoData" Visibility="Hidden">
+                    <Label x:Name="repoOwner" 
+                        Content="Owner: "
+                        Foreground="gray"
+                        Cursor="Hand"
+                        FontWeight="Bold"
+                        MouseDoubleClick="repoOwner_MouseDoubleClick"
+                        Margin="5"/>
 
-            <Label x:Name="repoForks" 
-                   Content="Forks: "
-                   Cursor="Hand"
-                   Foreground="gray"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                    <Label x:Name="repoName" 
+                        Cursor="Hand"
+                        Content="Name: "
+                        Foreground="gray"
+                        MouseDoubleClick="repoName_MouseDoubleClick"
+                        FontWeight="Bold"
+                        Margin="5"/>
 
-            <Label x:Name="repoStars" 
-                   Content="Stars: "
-                   Cursor="Hand"
-                   Foreground="gray"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                    <Label x:Name="repoLanguage" 
+                        Cursor="Hand"
+                        Content="Language: "
+                        Foreground="gray"
+                        MouseDoubleClick="repoLanguage_MouseDoubleClick"
+                        FontWeight="Bold"
+                        Margin="5"/>
 
-            <Label x:Name="repoWatching" 
-                   Content="Watching: "
-                   Foreground="gray"
-                   Cursor="Hand"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                    <Label x:Name="repoVisibility" 
+                        Content="Visibility: "
+                        Foreground="gray"
+                        FontWeight="Bold"
+                        Margin="5"/>
 
-            <Label x:Name="repoLicense" 
-                   Content="License: "
-                   Foreground="gray"
-                   Cursor="Hand"
-                   FontWeight="Bold"
-                   Margin="5"/>
+                    <Label x:Name="repoForks" 
+                        Content="Forks: "
+                        Cursor="Hand"
+                        Foreground="gray"
+                        MouseDoubleClick="repoForks_MouseDoubleClick"
+                        FontWeight="Bold"
+                        Margin="5"/>
 
-        </StackPanel>
+                    <Label x:Name="repoStars" 
+                        Content="Stars: "
+                        Cursor="Hand"
+                        Foreground="gray"
+                        MouseDoubleClick="repoStars_MouseDoubleClick"
+                        FontWeight="Bold"
+                        Margin="5"/>
 
+                    <Label x:Name="repoWatching" 
+                        Content="Watching: "
+                        Foreground="gray"
+                        MouseDoubleClick="repoWatching_MouseDoubleClick"
+                        Cursor="Hand"
+                        FontWeight="Bold"
+                        Margin="5"/>
+
+                    <Label x:Name="repoLicense" 
+                        Content="License: "
+                        Foreground="gray"
+                        FontWeight="Bold"
+                        Margin="5"/>
+                </StackPanel>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </UserControl>
