--- a/Source/ToolWindows/MyToolWindowControl.xaml
+++ b/Source/ToolWindows/MyToolWindowControl.xaml
@@ -3,13 +3,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
-    xmlns:theming="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Imaging"
-    xmlns:util="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Utilities"
-    xmlns:catalog="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.ImageCatalog"
     xmlns:toolkit="clr-namespace:Community.VisualStudio.Toolkit;assembly=Community.VisualStudio.Toolkit"
-    xmlns:local="clr-namespace:GithubRepositoryStats"
-    xmlns:PlatformUI="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
     x:Class="GithubRepositoryStats.MyToolWindowControl"
     toolkit:Themes.UseVsTheme="True"
     mc:Ignorable="d"
@@ -28,7 +22,7 @@
 
 
                         <Button
-                            Click="refreshButton_Click"
+                            Click="RefreshButton_Click"
                             x:Name="refreshButton" 
                             Content="Refresh" 
                             Margin="2 0"
@@ -50,7 +44,7 @@
                         <Label.Content>
                             <Span>
                                 <Span>Owner:</Span>
-                                <Hyperlink x:Name="repoOwner" RequestNavigate="baseRequestNavigate"/>
+                                <Hyperlink x:Name="repoOwner" RequestNavigate="BaseRequestNavigate"/>
                             </Span>
                         </Label.Content>
                     </Label>
@@ -59,7 +53,7 @@
                         <Label.Content>
                             <Span>
                                 <Span>Name:</Span>
-                                <Hyperlink x:Name="repoName" RequestNavigate="baseRequestNavigate" />
+                                <Hyperlink x:Name="repoName" RequestNavigate="BaseRequestNavigate" />
                             </Span>
                         </Label.Content>
                     </Label>
@@ -77,7 +71,7 @@
                         <Label.Content>
                             <Span>
                                 <Span>Forks:</Span>
-                                <Hyperlink x:Name="repoForks" RequestNavigate="baseRequestNavigate"/>
+                                <Hyperlink x:Name="repoForks" RequestNavigate="BaseRequestNavigate"/>
                             </Span>
                         </Label.Content>
                     </Label>
@@ -86,7 +80,7 @@
                         <Label.Content>
                             <Span>
                                 <Span>Stars:</Span>
-                                <Hyperlink x:Name="repoStars" RequestNavigate="baseRequestNavigate"/>
+                                <Hyperlink x:Name="repoStars" RequestNavigate="BaseRequestNavigate"/>
                             </Span>
                         </Label.Content>
                     </Label>
@@ -95,7 +89,7 @@
                         <Label.Content>
                             <Span>
                                 <Span>Watching:</Span>
-                                <Hyperlink x:Name="repoWatching" RequestNavigate="baseRequestNavigate"/>
+                                <Hyperlink x:Name="repoWatching" RequestNavigate="BaseRequestNavigate"/>
                             </Span>
                         </Label.Content>
                     </Label>
@@ -104,7 +98,7 @@
                         <Label.Content>
                             <Span>
                                 <Span>Open Issues:</Span>
-                                <Hyperlink x:Name="repoOpenIssues" RequestNavigate="baseRequestNavigate"/>
+                                <Hyperlink x:Name="repoOpenIssues" RequestNavigate="BaseRequestNavigate"/>
                             </Span>
                         </Label.Content>
                     </Label>
@@ -121,7 +115,7 @@
                     <Label FontWeight="Bold" Margin="5">
                         <Label.Content>
                             <Span>
-                                <Span>Visibility:</Span>
+                                <Span>License:</Span>
                                 <Span x:Name="repoLicense"/>
                             </Span>
                         </Label.Content>
